--- a/text/s1-c07a-git-directory.textile
+++ b/text/s1-c07a-git-directory.textile
@@ -1,8 +1,8 @@
 h2. The Git Directory
 
-When you initialize a Git repository, either by cloning an existing one or creating a new one, the first thing Git does is create a "Git Directory".  This is the directory that stores all the object data, tags, branches, hooks and more.  Everything that Git permanently stores goes in this single directory.  When you clone someone else's repository, it basically just copies the contents of this directory to your computer.  Without a checkout (called a "working directory") this is called a "bare" Git repo and moving it to another computer backs up your entire project history.  It is the soul of Git.
+When you initialize a Git repository, either by cloning an existing one or creating a new one, the first thing Git does is create a Git directory.  This is the directory that stores all the object data, tags, branches, hooks and more.  Everything that Git permanently stores goes in this single directory.  When you clone someone else's repository, it basically just copies the contents of this directory to your computer.  Without a checkout (called a _working directory_) this is called a _bare_ Git repo and moving it to another computer backs up your entire project history.  It is the soul of Git.
 
-When you run 'git init' to initialize your repository, the Git directory is by default installed in the directory you are currently in as '.git'.  This can be overridden with the _GIT_DIR_ environment variable at any time.  In fact, the Git directory does not need to be in your source tree at all.  It's perfectly acceptable to keep all your Git directories in a central place (ex: /opt/git/myproject.git) and just make sure to set the GIT_DIR variable when you switch projects you are working on (ex: /home/username/projects/myproject).
+When you run @git init@ to initialize your repository, the Git directory is by default installed in the directory you are currently in as @.git@.  This can be overridden with the _GIT_DIR_ environment variable at any time.  In fact, the Git directory does not need to be in your source tree at all.  It's perfectly acceptable to keep all your Git directories in a central place (ex: @/opt/git/myproject.git@) and just make sure to set the GIT_DIR variable when you switch projects you are working on (ex: @/home/username/projects/myproject@).
 
 The Git directory for our little project looks something like this:
 
@@ -14,7 +14,7 @@ For now, let's go over some of the more important contents of this directory.
 
 h3. .git/config
 
-This is the main Git configuration file.  It keeps your project specific Git options, such as your remotes, push configurations, tracking branches and more.  Your configuration will be loaded first from this file, then from a ~/.gitconfig file and then from an /etc/gitconfig file, if they exist.
+This is the main Git configuration file.  It keeps your project specific Git options, such as your remotes, push configurations, tracking branches and more.  Your configuration will be loaded first from this file, then from a @~/.gitconfig@ file and then from an @/etc/gitconfig@ file, if they exist.
 
 Here is an example of what a config file might look like:
 
@@ -24,7 +24,7 @@ See the "git-config":http://www.kernel.org/pub/software/scm/git/docs/git-config.
 
 h3. .git/index
 
-This is the default location of the 'index' file for your Git project.  This location can be overridden with the _GIT_INDEX_ environment variable, which is sometimes useful for temporary tree operations.  See the chapter on the "Git Index" for more information on what this file is used for.
+This is the default location of the @index@ file for your Git project.  This location can be overridden with the _GIT_INDEX_ environment variable, which is sometimes useful for temporary tree operations.  See the chapter on the "Git Index" for more information on what this file is used for.
 
 h3. .git/objects/
 
@@ -42,7 +42,7 @@ h3. .git/refs/
 
 This directory normally has three subdirectories in it - _heads_, _remotes_ and _tags_.  Each of these directories will hold files that correspond to your local branches, remote branches and tags, respectively. 
 
-For example, if you create a 'development' branch, the file .git/refs/heads/development will be created and will contain the SHAof the commit that is the latest commit of that branch.
+For example, if you create a @development@ branch, the file @.git/refs/heads/development@ will be created and will contain the SHA of the commit that is the latest commit of that branch.
 
 h3. .git/HEAD
 
@@ -52,7 +52,7 @@ code. ref: refs/heads/master
 
 h3. .git/hooks
 
-This directory contains shell scripts that are invoked after the Git commands they are named after.  For example, after you run a commit, Git will try to execute the _post-commit_ script, if it has executable permissions.
+This directory contains shell scripts that are invoked after the Git commands they are named after.  For example, after you run a commit, Git will try to execute the @post-commit@ script, if it has executable permissions.
 
 See the 
 "online hooks documentation":http://www.kernel.org/pub/software/scm/git/docs/hooks.html
